# deprechaun

./: .gitignore  README.md  pyproject.toml
deprechaun/: asset.py  method.py
deprechaun/bookreader/: __init__.py  book_asset.py  systems.py
tests/: test_asset.py  test_method.py
tests/bookreader/: test_systems.py
