[tool.poetry]
name = "deprechaun"
version = "0.1.0"
description = "Toying with depreciation for US income taxes"
authors = ["MathSquared <MathSquared@users.noreply.github.com>"]
license = "GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.339"

[tool.pyright]
include = ["deprechaun"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
